--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -56,7 +56,7 @@ jobs:
             src-tauri -> target
             uv-wrapper -> target
           cache-on-failure: true
-          shared-key: ${{ matrix.target }}
+          shared-key: ${{ matrix.target }}-v2
 
       - name: Install dependencies
         run: yarn install
