--- a/src-tauri/python-entitlements.plist
+++ b/src-tauri/python-entitlements.plist
@@ -7,6 +7,32 @@
 	<!-- This is necessary for dynamically installed Python packages -->
 	<key>com.apple.security.cs.disable-library-validation</key>
 	<true/>
+	
+	<!-- Network permissions for Python daemon -->
+	<key>com.apple.security.network.server</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	
+	<!-- USB/Serial access for robot communication -->
+	<key>com.apple.security.device.serial</key>
+	<true/>
+	<key>com.apple.security.device.usb</key>
+	<true/>
+	
+	<!-- Camera access for vision features -->
+	<key>com.apple.security.device.camera</key>
+	<true/>
+	
+	<!-- Microphone access for speech/conversation features -->
+	<key>com.apple.security.device.audio-input</key>
+	<true/>
+	
+	<!-- Allow JIT and unsigned memory for Python -->
+	<key>com.apple.security.cs.allow-jit</key>
+	<true/>
+	<key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+	<true/>
 </dict>
 </plist>
 
