feat: WiFi connection mode + Linux AppImage build fix (#27)
- Add WiFi/USB/Simulation connection modes in FindingRobotView
- Create useConnection hook for unified connection interface
- Fix scan animation not playing in WiFi mode
- Add SettingsOverlay with WiFi config and update management
- Fix Linux AppImage build (APPIMAGE_EXTRACT_AND_RUN)
- Add debug logs for stopDaemon flow
- Dynamic API URLs based on connection mode

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -700,6 +700,9 @@ jobs:
         if: matrix.os == 'ubuntu-22.04'
         shell: bash
         working-directory: src-tauri
+        env:
+          # Required for AppImage tools to work without FUSE (not available in GitHub Actions)
+          APPIMAGE_EXTRACT_AND_RUN: 1
         run: |
           # Install dependencies required for .deb build
           sudo apt-get update
