--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,6 +29,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serialport = "4.2"
 signal-hook = "0.3"
+tauri-plugin-http = "2.5.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
