--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -16,7 +16,7 @@ jobs:
     permissions:
       contents: write
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         include:
           - os: macos-latest
@@ -367,18 +367,9 @@ jobs:
             else
               echo "⚠️ Warning: Could not verify private key (may require password or key mismatch)"
             fi
-            
-            # ✅ Export cleaned key to GITHUB_ENV for use in build steps
-            # Read the cleaned key from file (single line, no spaces/newlines)
-            CLEANED_SIGNING_KEY=$(cat ~/.tauri/reachy-mini.key)
-            echo "TAURI_SIGNING_PRIVATE_KEY=$CLEANED_SIGNING_KEY" >> $GITHUB_ENV
-            echo "✅ Exported cleaned signing key to GITHUB_ENV"
           else
             echo "⚠️ No signing key provided, generating temporary key..."
             yarn tauri signer generate -w ~/.tauri/reachy-mini.key --ci || true
-            # Export the generated key
-            CLEANED_SIGNING_KEY=$(cat ~/.tauri/reachy-mini.key)
-            echo "TAURI_SIGNING_PRIVATE_KEY=$CLEANED_SIGNING_KEY" >> $GITHUB_ENV
           fi
 
       - name: Extract version before build
@@ -526,10 +517,6 @@ jobs:
           # We'll sign manually after build with our script that signs ALL binaries
           # signingIdentity is set to "-" in tauri.macos.conf.json to disable auto-signing
           APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
-          # Required for createUpdaterArtifacts to generate .app.tar.gz.sig
-          # Use cleaned key from GITHUB_ENV (set in Setup Tauri Signing Key step)
-          TAURI_SIGNING_PRIVATE_KEY: ${{ env.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ""
         shell: bash
         working-directory: src-tauri
         run: |
@@ -629,11 +616,6 @@ jobs:
 
       - name: Build Tauri app (Windows)
         if: matrix.os == 'windows-latest'
-        env:
-          # Required for createUpdaterArtifacts to generate .msi.sig
-          # Use cleaned key from GITHUB_ENV (set in Setup Tauri Signing Key step)
-          TAURI_SIGNING_PRIVATE_KEY: ${{ env.TAURI_SIGNING_PRIVATE_KEY }}
-          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ""
         shell: bash
         working-directory: src-tauri
         run: |
@@ -711,9 +693,6 @@ jobs:
         if: matrix.os == 'ubuntu-22.04'
         shell: bash
         working-directory: src-tauri
-        env:
-          # Required for AppImage tools to work without FUSE (not available in GitHub Actions)
-          APPIMAGE_EXTRACT_AND_RUN: 1
         run: |
           # Install dependencies required for .deb build
           sudo apt-get update
@@ -737,9 +716,7 @@ jobs:
             curl \
             file \
             libc-bin \
-            dpkg-dev \
-            libfuse2 \
-            squashfs-tools
+            dpkg-dev
           
           # Tauri handles .deb package creation automatically
           # Set environment variables for pkg-config if needed
@@ -747,11 +724,6 @@ jobs:
           
           # Clean previous build artifacts to avoid conflicts
           rm -rf target/${{ matrix.target }}/release/bundle
-          
-          # Set signing key for createUpdaterArtifacts to generate .AppImage.tar.gz.sig
-          # Use cleaned key from GITHUB_ENV (set in Setup Tauri Signing Key step)
-          export TAURI_SIGNING_PRIVATE_KEY="${{ env.TAURI_SIGNING_PRIVATE_KEY }}"
-          export TAURI_SIGNING_PRIVATE_KEY_PASSWORD=""
           
           yarn tauri build --target ${{ matrix.target }}
 
@@ -1113,14 +1085,8 @@ jobs:
           files: |
             src-tauri/target/*/release/bundle/deb/*.deb
             src-tauri/target/*/release/bundle/msi/*.msi
-            src-tauri/target/*/release/bundle/msi/*.msi.sig
-            src-tauri/target/*/release/bundle/appimage/*.AppImage
-            src-tauri/target/*/release/bundle/appimage/*.AppImage.tar.gz
-            src-tauri/target/*/release/bundle/appimage/*.AppImage.tar.gz.sig
             src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.dmg
             src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.zip
-            src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz
-            src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz.sig
             releases/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -1132,15 +1098,9 @@ jobs:
           tag_name: v${{ steps.version.outputs.version }}
           files: |
             ${{ matrix.os == 'windows-latest' && format('src-tauri/target/{0}/release/bundle/msi/*.msi', matrix.target) || '' }}
-            ${{ matrix.os == 'windows-latest' && format('src-tauri/target/{0}/release/bundle/msi/*.msi.sig', matrix.target) || '' }}
             ${{ matrix.os == 'ubuntu-22.04' && format('src-tauri/target/{0}/release/bundle/deb/*.deb', matrix.target) || '' }}
-            ${{ matrix.os == 'ubuntu-22.04' && format('src-tauri/target/{0}/release/bundle/appimage/*.AppImage', matrix.target) || '' }}
-            ${{ matrix.os == 'ubuntu-22.04' && format('src-tauri/target/{0}/release/bundle/appimage/*.AppImage.tar.gz', matrix.target) || '' }}
-            ${{ matrix.os == 'ubuntu-22.04' && format('src-tauri/target/{0}/release/bundle/appimage/*.AppImage.tar.gz.sig', matrix.target) || '' }}
             ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.dmg', matrix.target) || '' }}
             ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.zip', matrix.target) || '' }}
-            ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.app.tar.gz', matrix.target) || '' }}
-            ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.app.tar.gz.sig', matrix.target) || '' }}
             releases/**/*.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
