--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,6 +25,7 @@ tauri-plugin-positioner = "2"
 tauri-plugin-process = "2"
 tauri-plugin-updater = "2.0"
 tauri-plugin-macos-permissions = "2.3"
+tauri-plugin-http = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serialport = "4.2"
