--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -694,7 +694,7 @@ jobs:
         shell: bash
         working-directory: src-tauri
         run: |
-          # Install dependencies required for .deb build
+          # Install dependencies required for .deb and AppImage build
           sudo apt-get update
           sudo apt-get install -y \
             libwebkit2gtk-4.1-dev \
@@ -716,7 +716,9 @@ jobs:
             curl \
             file \
             libc-bin \
-            dpkg-dev
+            dpkg-dev \
+            libfuse2 \
+            squashfs-tools
           
           # Tauri handles .deb package creation automatically
           # Set environment variables for pkg-config if needed
