fix: add Windows .msi.zip upload for updater in release workflow
The Windows auto-updater requires the .msi.zip file to be uploaded to GitHub releases,
but the workflow was only uploading .tar.gz files from the releases/ directory.

This fix adds:
- releases/**/*.zip (for Windows .msi.zip updater files)
- releases/**/*.zip.sig (for the corresponding signature files)

This ensures the Windows updater can download the update file specified in latest.json.

Fixes auto-update functionality on Windows platform.

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -1147,6 +1147,8 @@ jobs:
             src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz
             src-tauri/target/aarch64-apple-darwin/release/bundle/macos/*.app.tar.gz.sig
             releases/**/*.tar.gz
+            releases/**/*.zip
+            releases/**/*.zip.sig
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -1167,6 +1169,8 @@ jobs:
             ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.app.tar.gz', matrix.target) || '' }}
             ${{ matrix.os == 'macos-latest' && format('src-tauri/target/{0}/release/bundle/macos/*.app.tar.gz.sig', matrix.target) || '' }}
             releases/**/*.tar.gz
+            releases/**/*.zip
+            releases/**/*.zip.sig
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
