--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -30,6 +30,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serialport = "4.2"
 signal-hook = "0.3"
+reqwest = { version = "0.11", features = ["json"] }
+semver = "1.0"
+tokio = { version = "1", features = ["time"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
