--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,6 @@ uv-wrapper/target/**/*
 # Tutorial videos - too large, never commit
 src/assets/tutorial/
 docs/latest.json
+
+# Blender source files (too large for git)
+src/assets/robot-3d/blender/
