--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@react-three/postprocessing": "^3.0.4",
     "@tanstack/react-virtual": "^3.13.12",
     "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/plugin-deep-link": "^2.0.0",
     "@tauri-apps/plugin-http": "^2.5.4",
     "@tauri-apps/plugin-positioner": "^2.3.1",
     "@tauri-apps/plugin-process": "^2.0.0",
