--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "deploy:daemon-v2": "npm run build:web && rm -rf ../reachy_mini/src/reachy_mini/daemon/app/dashboard-v2/* && cp -r dist-web/* ../reachy_mini/src/reachy_mini/daemon/app/dashboard-v2/",
     "tauri": "tauri",
     "tauri:dev": "tauri dev --no-watch",
+    "tauri:dev:fresh": "yarn kill-daemon && yarn clean && yarn build:sidecar-macos && yarn tauri:dev",
     "tauri:build": "tauri build",
     "build:sidecar-macos": "bash ./scripts/build/build-sidecar-unix.sh",
     "build:sidecar-linux": "bash ./scripts/build/build-sidecar-unix.sh",
