fix(ci): use macos-15-intel for native Intel build
The root cause of the x86_64-apple-darwin build failure:
- macos-latest is now ARM64 (Apple Silicon) since Sept 2025
- Cross-compiling to x86_64 from ARM64 requires additional toolchain setup
- rustup target add alone is not sufficient for cross-compilation

Solution: Use macos-15-intel runner for Mac Intel builds
- Native Intel runner, no cross-compilation needed
- Available until August 2027 per GitHub's timeline
- Simpler and more reliable than cross-compilation setup

References:
- GitHub macos-15-intel announcement: github.com/actions/runner-images/issues/13045
- Rust x86_64-apple-darwin demotion: blog.rust-lang.org/2025/08/19

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -27,7 +27,10 @@ jobs:
           - os: macos-latest
             target: aarch64-apple-darwin
             platform: darwin-aarch64
-          - os: macos-latest
+          # Use macos-15-intel for native Intel build (no cross-compilation needed)
+          # macos-latest is now ARM64 only, cross-compilation to x86_64 is unreliable
+          # macos-15-intel available until August 2027
+          - os: macos-15-intel
             target: x86_64-apple-darwin
             platform: darwin-x86_64
           - os: windows-latest
