--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -116,6 +116,33 @@ jobs:
         run: |
           TARGET_TRIPLET=${{ matrix.target }} bash ./scripts/build/build-sidecar-unix.sh || echo "Sidecar build skipped"
 
+      - name: Update macOS resources config with cpython folder name
+        if: matrix.os == 'macos-latest' || matrix.os == 'macos-15-intel'
+        shell: bash
+        run: |
+          # Find the actual cpython folder name created by uv-bundle
+          CPYTHON_FOLDER=$(ls -d src-tauri/binaries/cpython-* 2>/dev/null | head -1 | xargs basename || echo "")
+          
+          if [ -z "$CPYTHON_FOLDER" ]; then
+            echo "⚠️  No cpython folder found in src-tauri/binaries/, skipping config update"
+            exit 0
+          fi
+          
+          echo "🔧 Found cpython folder: $CPYTHON_FOLDER"
+          echo "   Updating tauri.macos.conf.json..."
+          
+          # Update the tauri.macos.conf.json with the exact cpython folder name
+          # The config has hardcoded aarch64 path, we need to replace it with the actual folder
+          sed -i '' "s|cpython-3.12[^\"]*|$CPYTHON_FOLDER|g" src-tauri/tauri.macos.conf.json
+          
+          echo "✅ Updated tauri.macos.conf.json:"
+          cat src-tauri/tauri.macos.conf.json
+          
+          # Verify the binaries directory contents
+          echo ""
+          echo "📦 Contents of src-tauri/binaries/:"
+          ls -la src-tauri/binaries/
+
       - name: Update Linux resources config with cpython folder name
         if: matrix.os == 'ubuntu-22.04'
         shell: bash
