fix(ci): correct sed regex to preserve /lib suffix in cpython path (#94)
The regex cpython-3.12[^"]* was matching too much, including /lib,
causing the resources config to have duplicate keys and missing the
cpython/lib folder bundling.

Fix: Use exact match cpython-3.12.12-macos-aarch64-none instead of greedy regex.

--- a/.github/workflows/release-unified.yml
+++ b/.github/workflows/release-unified.yml
@@ -133,7 +133,8 @@ jobs:
           
           # Update the tauri.macos.conf.json with the exact cpython folder name
           # The config has hardcoded aarch64 path, we need to replace it with the actual folder
-          sed -i '' "s|cpython-3.12[^\"]*|$CPYTHON_FOLDER|g" src-tauri/tauri.macos.conf.json
+          # IMPORTANT: Only replace the exact folder name, not /lib suffix
+          sed -i '' "s|cpython-3.12.12-macos-aarch64-none|$CPYTHON_FOLDER|g" src-tauri/tauri.macos.conf.json
           
           echo "✅ Updated tauri.macos.conf.json:"
           cat src-tauri/tauri.macos.conf.json
