--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "swiper": "^12.0.3",
+    "tauri-plugin-posthog-api": "^0.2.2",
     "three": "^0.181.0",
     "urdf-loader": "^0.12.6",
     "use-sound": "^5.0.0",
