--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,11 +35,21 @@ signal-hook = "0.3"
 reqwest = { version = "0.11", features = ["json"] }
 semver = "1.0"
 tokio = { version = "1", features = ["rt", "sync", "time"] }
+lazy_static = "1.4"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.25"
 objc = "0.2"
 block = "0.1"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.58", features = [
+    "Win32_Foundation",
+    "Win32_System_LibraryLoader",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Devices_DeviceAndDriverInstallation",
+    "Win32_Devices_Usb",
+] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-cli = "2"
